# init-wrapper

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.debian  LICENSE  README.md
.pi/agents/: software-designer.md  software-developer.md  software-implementer.md  software-qa.md  software-reviewer.md  software-systems-engineer.md  user-representative.md
.pi/extensions/: guardrails.json  guardrails.v0.json
.pi/prompts/: software-developer-parallel.md  software-role-workflow.md
.pi/skills/iterative-findings-loop/: SKILL.md
.pi/skills/run-init-wrapper-smoke-checks/: SKILL.md
.pi/skills/software-developer-parallel/: SKILL.md
.pi/skills/software-role-agents/: SKILL.md
docs/artifacts/: current-qemu-boot-smoke.md  current-userns-smoke-attempt.md
docs/diagrams/: README.md  mermaid-config.json  module-architecture.mmd
docs/guidelines/: a-complete-guide-to-agents-md.md
src/: kmsg.rs  link.rs  link_gcc.rs  main.rs  mem.rs  tm.rs  unix.rs
